Fix cards width and alignment

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -102,5 +102,8 @@
 }
 
 .inner-card {
+  justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
 }
