--- a/style.css
+++ b/style.css
@@ -3438,7 +3438,10 @@ img {
   }
 }
 .inner-card {
+  justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .btn {
